--- a/HiddenVilla_Server/Shared/NavMenu.razor
+++ b/HiddenVilla_Server/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="bindprop">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Bind Properties
+            </NavLink>
+        </div>
     </nav>
 </div>
 
