--- a/HiddenVilla_Server/Shared/NavMenu.razor
+++ b/HiddenVilla_Server/Shared/NavMenu.razor
@@ -24,9 +24,14 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
-         <div class="nav-item px-3">
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="bindprop">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Bind Properties
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="demoHotel">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Demo Hotel
             </NavLink>
         </div>
     </nav>
